--- a/_posts/2019-03-04-ml.md
+++ b/_posts/2019-03-04-ml.md
@@ -30,13 +30,25 @@ tags:
 
 > For more details than below, check [this tutorial](https://medium.com/greyatom/lets-learn-about-auc-roc-curve-4a94b4d88152).
 
+> True positive rate = recall = sensitivity
+
+> False positive rate = fall out = 1 - specificity
+ 
+> Specificity = True negative rate
+
+> AUC is the area under the **ROC** curve!
+
 &nbsp;&nbsp;&nbsp;&nbsp;AUC (area under curve) is evaluating the rate for **classify positive to positive and negative to negative**. So, in perfect situation, we should get `AUC=1`.
+
+> A receiver operating characteristic curve, or ROC curve, is a graphical plot that illustrates the diagnostic ability of a **binary classifier** system **as its discrimination threshold is varied**.
 
 &nbsp;&nbsp;&nbsp;&nbsp;ROC is a curve with y axis to be **true positive rate (TPR)** and x axis to be **false positive rate (FPR)**. Actually the FPR is just `1 - True Negative Rate` (Specificity, compared with sensitivity/recall). Sensitivity represent the model can correctly classify positive to positive and specificity says the model can classify negative to negative.
 
 &nbsp;&nbsp;&nbsp;&nbsp;For how to translate the above relationship into a curve, [this tutorial](https://medium.com/greyatom/lets-learn-about-auc-roc-curve-4a94b4d88152) described this relationship as **shifting the threshold**, which is very impressive.
 
 ### F1 Score
+
+> Harmonic average of recall & precision.
 
 &nbsp;&nbsp;&nbsp;&nbsp;The F1 score is an evaluation method for **binary classification**. In short, the F1 score is just a *harmonic mean of precision and recall*. The harmonic mean for `n` numbers can be find [here](https://en.wikipedia.org/wiki/Harmonic_mean). So, F1 score is defined as [this](https://wikimedia.org/api/rest_v1/media/math/render/svg/057ffc6b4fa80dc1c0e1f2f1f6b598c38cdd7c23).
 
@@ -116,3 +128,84 @@ tags:
 
 * `plt.plot(x,y,label="")` is to draw curves.
 * `plt.scatter(x,y,label="")` is to draw scatters.
+
+### Regression Analysis
+
+&nbsp;&nbsp;&nbsp;&nbsp;"Regression residual analysis" is used to check if a regression model is proper for the data or not. Check [here](https://stattrek.com/regression/residual-analysis.aspx) for more information.
+
+### Type 1 & Type 2 Error
+
+- Type 1: false positive, tell a healthy man he has disease.
+- Type 2: false negative, tell an ill man he is ok.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Remember that H0 (null hypothesis) is normally assuming **not happending**, so Type 1 error rejected H0 and Type 2 error accepted H0 by mistake. Check more [here](https://www.springboard.com/blog/machine-learning-interview-questions/).
+
+### Adam optimizer
+
+> Check more [here](http://ruder.io/optimizing-gradient-descent/index.html#nesterovacceleratedgradient).
+
+&nbsp;&nbsp;&nbsp;&nbsp;Adam is a combination of *momentum* and *RSMprop*.
+
+- Momentum: use the trend from previous gradient to *correct* current gradient.
+- RSMprop: automatically change **learning rate** based on the expectation of gradient.
+
+### On policy & Off policy update
+
+> Q-learning is off policy alg while SARSA is on policy alg!
+
+- On policy: updating not related with (actual) action. In q-learning, we can update as long as we have current q-value.
+- Off policy: update based on what action is taking. In sarsa, we use the actually choosed action to update.
+
+### Q-Q plot
+
+> Normal Quantile-Quantile plot: used to determine is a set of observation is **normally distributed**.
+
+> If the observation is normally distributed, the Q-Q plot should looks like a straight line.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Given a set of `n` observation `O`, the following procedure give the QQ plot:
+
+1. Sort `O` in increasing order.
+2. Divide the standard normal distribution into `n+1` part with equal probability (there will be `n` spliting point).
+3. Use sorted `O` as y values, the value at **spliting point** as x values to draw a **scatter plot** which is the QQ plot.
+
+### Principal Component Analysis (PCA)
+
+> Take care that using PCA, the new feature will be **harder to interpret**!
+
+> The basic idea for PCA: pick **directions/eigon vector** that has larger eigon value. Check [here](https://towardsdatascience.com/a-one-stop-shop-for-principal-component-analysis-5582fb7e0a9c) for more details.
+
+- Covariance Matrix for `X`: 
+	1. Subtract each column with mean `Z=X-mean_column(X)`
+	2. Normalize each column with variance `Z=Z/variance_column(Z)`
+	3. Covariance matrix is `Z^TZ`.
+- Single Value Decomposition (SVD):
+	1. `Z^TZ = PDP^(-1)` where `P` is the matrix for eigon vector and D is a diagonal matrix with eigon value.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Remeber the output of PCA is a **new dataset!** Here we are going to use `Z*=ZP*` where `P*` is the matrix may only contains a part of eigon vectors.
+
+### Gausian Mixed Model & Expectation Maximization (EM)
+
+> [Here](https://www.youtube.com/watch?v=qMTuMa86NzU) is a perfect explaination for GMM and EM! Must see!
+
+> Gausian Mixed Model is just a summation of multiple Gausian models.
+
+> "Expectation" at here means **likelihood**!
+
+#### Probability vs Likelihood
+
+- Probability: for a model, **given parameters** the possibility for an **observation**.
+- Likelihood: **given observation**, the possibility for parameters.
+
+#### GMM & EM
+
+> K-means can only work with circle distribution based on its **centroid** method. GMM can be used for ellipse.
+
+> K-means can be treated as a special case for GMM where the covariance matrix is a scalar times an identity matrix.
+
+&nbsp;&nbsp;&nbsp;&nbsp;The work for EM is to **estimate parameters that maximize likelihood for the dataset.** In a GMM, the parameters are `mu`,`delta`, and weight for each Gaussian model.
+
+1. Given dataset `X` with `n` data point.
+2. Initialize `mu`, `delta`, and `pi` where `pi` is the weight for each Guassian model.
+3. Estimate (E-step): calculate the responsibility **for each Guassian model in each data point**, get a `N*K` matrix where `K` is the number of Guassian model used. The responsibility is defined as *chance for this data point to be **generated by** this model divided by the sum of the data point is generated by each model, all weighted by `pi`*.
+4. Maximize (M-step): Update `mu`, `delta`, `pi` based on its responsibilies. It easier to understand this process with *matrix operation*, check the tutorial at the beginning of this section for more detail.
+
