--- a/_posts/2019-03-18-sql.md
+++ b/_posts/2019-03-18-sql.md
@@ -47,7 +47,7 @@ tags:
 
 &nbsp;&nbsp;&nbsp;&nbsp;Using a new value can directly create a new column, such as `select 123 as num;` and you will get a new column names "num" and the value is 1.
 
-#### Arithmatic
+#### Arithmatic / Window Function
 
 ##### SUM, AVG
 
@@ -58,6 +58,12 @@ tags:
 ##### HAVING
 
 &nbsp;&nbsp;&nbsp;&nbsp;`HAVING` is to giving more constrains after `GROUP BY`. Take care if we use `HAVING` for the result of arithmatic operations, we **can't use its name after `AS`** but need to use the original equation such as `MAX(height)`. Because the `SELECT` operation is almost executed at last, so the name after `AS` doesn't exist when `HAVING`/`GROUP BY` is execuded.
+
+##### Window Function
+
+> [This](https://mysqlserverteam.com/mysql-8-0-2-introducing-window-functions/) is a good guide for window functions.
+
+&nbsp;&nbsp;&nbsp;&nbsp;`select aggregate_function(column) over(partition by ... order by ...)`. Window function compared with normal aggregation function is to **calculate aggregation for every row**.
 
 #### CASE
 
