--- a/_posts/2019-03-04-ml.md
+++ b/_posts/2019-03-04-ml.md
@@ -15,6 +15,8 @@ tags:
 
 > For all ML problems, there are always some important entities: **data, model, objective function**. Our technology like p-vaule is for data (null hypothesis), multiple model and loss is for the rest. Take a look at [this answer](https://qr.ae/TW7ivG), the writer really mastered such idea for analyzing DS problems.
 
+> Remember that Ridge and Lasso *don't regularize bias term!* Check [here](https://stats.stackexchange.com/questions/86991/reason-for-not-shrinking-the-bias-intercept-term-in-regression/161689) for more detail.
+
 ### To Do
 
 * Python implementation.
