--- a/_posts/2019-04-14-cpp-fund.md
+++ b/_posts/2019-04-14-cpp-fund.md
@@ -115,7 +115,7 @@ tags:
 
 #### Initialize
 
-&nbsp;&nbsp;&nbsp;&nbsp;Initialize with a series of **pairs** `unordered_map<int,int> mp{{1,2},{3,4}}`.
+&nbsp;&nbsp;&nbsp;&nbsp;Initialize with a series of **pairs** `unordered_map<int,int> mp\{\{1,2},\{3,4}\}`.
 
 #### Find element
 
