--- a/_posts/2019-05-07-leetcode-04.md
+++ b/_posts/2019-05-07-leetcode-04.md
@@ -12,6 +12,8 @@ tags:
     - Data Structure
 ---
 
+> There are two ways of solving problems, the first is to **find analytical solution** such as calculate math problems, the second is to **search for valid solution** which is more like what computer did. If it's hard to find the analytical solution, try to leverage the power of computer.
+
 ### Python Programming
 
 - `string.isdigit`: easier to use than "c" in "1234567890" and it also works for `"123".isdigit()`.
@@ -51,7 +53,16 @@ tags:
 
 #### 621. Task Scheduler
 
-> There are two ways of solving problems, the first is to **find analytical solution** such as calculate math problems, the second is to **search for valid solution** which is more like what computer did.
+&nbsp;&nbsp;&nbsp;&nbsp;Solving programming problems are very similar as analyzing physical problems. The key is still **state & transition** but in programming, we can define the transition.
+
+&nbsp;&nbsp;&nbsp;&nbsp;In programming, finding the best solution means **define the best move in each state**.
+
+1. We need to firstly define what is the components we want in the states, which should be the key values that we care in this problem
+2. Then we need to consider what is the best move/transition in each state.
+3. Finally we consider use what data structure to deal with such state transaction.
+
+
+
 
 
 
