--- a/_posts/2019-05-17-java-fund.md
+++ b/_posts/2019-05-17-java-fund.md
@@ -11,7 +11,7 @@ tags:
     - Programming
 ---
 
-> This post is highly based on [this great tutorial](https://www.guru99.com/java-tutorial.html).
+> Java is a language high based on the OOP principles, you can't learn Java without learn OOP.
 
 ### Java Virtual Machine (JVM)
 
@@ -33,6 +33,77 @@ Finally the lowest level as the Machine Language.
 &nbsp;&nbsp;&nbsp;&nbsp;JVM is introduced to deal with this. The JAVA compiler won't compile JAVA code into machine language, instead it's compiled to **bytecode** (`.class` files). Then in whatever platform, as long as **JVM is running in the RAM**, the JVM will takecare of platforms and **translate** the bytecode into machine code **as run**. The name Java Virtual Machine just explained it's function!
 
 &nbsp;&nbsp;&nbsp;&nbsp;To see what JVM did while run a Java program, check [this video](https://youtu.be/G1ubVOl9IBw).
+
+### Java Application Schema
+
+- The `main` function in Java is mostly used to **launching** and **testing**. Java application is all about objects (instances) talking to each other, the `main` function is just a start point.
+
+#### Java Vairable
+
+> There are only two kind of variables in Java: **primitive variable** and **object reference**.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Take care that the *value* in reference variable is the *reference* instead of the object.
+
+> Using `new` to allocate space in the heap and when no reference is refering to an object, it is erased by garbage collection algorithm.
+
+&nbsp;&nbsp;&nbsp;&nbsp;The object defined by `new` is in **heap** but its reference is in **stack**.
+
+### Java Class
+
+> A class should define what is **known** (attributes) and what the class **can do** (methods). This should also been followed by Java's naming convintion which always give methods a verb.
+
+- The constructor **has no return type!** even `void`.
+
+#### Static Key Word
+
+> Take care, `static` doesn't equal to `const`. `static` means this variable / method belongs to the class instead of an object.
+
+##### Static variable
+
+&nbsp;&nbsp;&nbsp;&nbsp;A static variable means the variable is **shared** by all instance of this class.
+
+##### Static Method
+
+- A static method can be **invoked without the need for creating an instance** of a class. (This is why the `main` method is always static, because we don't need an object/instance to run it.)
+- The static method can not use non static data member or call non-static method directly.
+- `this` and `super` cannot be used in static context.
+
+> A static method / variable should be **accessed in a static way**!
+
+&nbsp;&nbsp;&nbsp;&nbsp;As shown above, a static method / variable is a component of the **class** instead of an instance. So, when we try to access a static method / variable, we should do `MyClass.staticMethod()` instead of `object.staticMethod()`. The latter on may work, but it's dangerous and unclear.
+
+##### Static Block
+
+- Is used to initialize the static data member. So, we don't need to type `static` everytime.
+- It is executed before the main method at the time of classloading.
+
+#### This Keyword
+
+> In java, this is a **reference variable** that refers to the current **object**.
+
+- `this` can be used to refer current class instance variable. (By using `this.varName = varName`, we can distinguish between the instance variable and function input.)
+- `this.method()` can be used to invoke current class method (implicitly)
+- `this()` can be used to invoke current class constructor. (The real usage of this case is to **reuse constructor in another constructor**.)
+- `method(this)` can be passed as an argument in the method call.
+- `AnotherClass(this)` can be passed as argument in the constructor call.
+- `return this` can be used to return the current class instance from the method.
+
+#### Class Inheritance
+
+> Inheritance represent a **IS A** relationship. It means the subclass **is a** superclass.
+
+&nbsp;&nbsp;&nbsp;&nbsp;The keyword for Java inheritance is `extends` (mind the `s`).
+
+&nbsp;&nbsp;&nbsp;&nbsp;Multiple inheritance (one subclass inheritate from multiple superclass) is not supported in Java.
+
+#### Class Aggregation
+
+> Aggregation represent a **HAS A** relationship. Such as the company class **has a** boss class.
+
+&nbsp;&nbsp;&nbsp;&nbsp;The usage of aggretation is easy, just create an instance in another class.
+
+
+
 
 
 
