--- a/_posts/2019-05-17-java-fund.md
+++ b/_posts/2019-05-17-java-fund.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "Java Basics"
+title:      "Java Basics & OOP"
 subtitle:   ""
 date:       2019-05-17
 author:     "Jiayi.Liu"
@@ -11,7 +11,10 @@ tags:
     - Programming
 ---
 
+> This post is highly relied on [this great tutorial](https://www.javatpoint.com/java-tutorial).
+
 > Java is a language high based on the OOP principles, you can't learn Java without learn OOP.
+
 
 ### Java Virtual Machine (JVM)
 
@@ -77,7 +80,17 @@ Finally the lowest level as the Machine Language.
 - Is used to initialize the static data member. So, we don't need to type `static` everytime.
 - It is executed before the main method at the time of classloading.
 
-#### This Keyword
+#### `final` Keyword
+
+> In Java, **final** means **constant**.
+
+- If you make any variable as final, you cannot change the value of final variable. (including function parameters)
+- If you make any method as final, you cannot override it.
+- If you make any class as final, you cannot extend it.
+
+#### `this` and `super` Keyword
+
+##### `this` in Java Class
 
 > In java, this is a **reference variable** that refers to the current **object**.
 
@@ -87,6 +100,18 @@ Finally the lowest level as the Machine Language.
 - `method(this)` can be passed as an argument in the method call.
 - `AnotherClass(this)` can be passed as argument in the constructor call.
 - `return this` can be used to return the current class instance from the method.
+
+##### `super` in Java Class
+
+> Whenever you create the instance of subclass, an instance of parent class is created implicitly which is referred by `super` **reference variable**.
+
+&nbsp;&nbsp;&nbsp;&nbsp;The use of `super` is very similar with `this`.
+
+- `super.var` can be used to refer immediate parent class instance variable.
+- `super.method()` can be used to invoke immediate parent class method.
+- `super()` can be used to invoke immediate parent class constructor.
+
+&nbsp;&nbsp;&nbsp;&nbsp;One most important usage of `super` keyword is to **reuse** the parent's constructor. Check [here](https://www.javatpoint.com/super-keyword) for an example. It seems like the inheritance in Java is letting the subclass object **share** the variables and methods with the implicitly created superclass object.
 
 #### Class Inheritance
 
@@ -102,7 +127,28 @@ Finally the lowest level as the Machine Language.
 
 &nbsp;&nbsp;&nbsp;&nbsp;The usage of aggretation is easy, just create an instance in another class.
 
+#### Polymorphism
 
+> **Overloading** means to define multiple method with the same name **in a class**. 
+
+##### Overloading
+
+- By changing number of arguments.
+- By changing the parameter type.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Remember that even though we can overload the `main` method, but the JVM only calls the `main` method with `String args[]` parameters.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Take care that when there is an ambiguity in invoking method such as `method(int a, long a)` and `method(long a, int b)` when input is `method(12, 12)` so we don't know witch method to call, there will be a run time error.
+
+##### Overriding
+
+> **Overriding** means to *redefine* a method in **subclass**.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Because by inheritance, the methods in superclass is automatically defined for subclass. So, overriding is just **redefine** the **inheritated method**. In Java, such *redefine* won't cause error if the previous method is inheritated.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Take special care that Java can do **overriding with return type!** But *overloading* with return type isn't allowed because of ambiguity.
+
+#####
 
 
 
