--- a/_posts/2019-05-17-java-fund.md
+++ b/_posts/2019-05-17-java-fund.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "Java Basics & OOP"
+title:      "Java JVM & OOP"
 subtitle:   ""
 date:       2019-05-17
 author:     "Jiayi.Liu"
