--- a/_posts/2019-05-22-java-ds.md
+++ b/_posts/2019-05-22-java-ds.md
@@ -36,4 +36,4 @@ int[] arr;
 arr = new int[10];
 ~~~
 
-&nbsp;&nbsp;&nbsp;&nbsp;At the beginning, we just decleared a reference variable in stack then we **point it** to a real object in heap. Of course, we can also do `int[] arr = new int[10];` to initialize while declearing.
+&nbsp;&nbsp;&nbsp;&nbsp;At the beginning, we just decleared a reference variable in stack then we **point it** to a real object in heap. Of course, we can also do `int[] arr = new int[10];` to initialize while declearing. Check [here](https://www.geeksforgeeks.org/arrays-in-java/) for more information.
