--- a/_posts/2019-05-17-java-fund.md
+++ b/_posts/2019-05-17-java-fund.md
@@ -148,6 +148,8 @@ Finally the lowest level as the Machine Language.
 
 &nbsp;&nbsp;&nbsp;&nbsp;Take special care that Java can do **overriding with return type!** But *overloading* with return type isn't allowed because of ambiguity.
 
+// To Continue: last time stop at [here](https://www.javatpoint.com/runtime-polymorphism-in-java)
+
 #####
 
 
