--- a/_posts/2019-05-22-java-ds.md
+++ b/_posts/2019-05-22-java-ds.md
@@ -37,3 +37,15 @@ arr = new int[10];
 ~~~
 
 &nbsp;&nbsp;&nbsp;&nbsp;At the beginning, we just decleared a reference variable in stack then we **point it** to a real object in heap. Of course, we can also do `int[] arr = new int[10];` to initialize while declearing. Check [here](https://www.geeksforgeeks.org/arrays-in-java/) for more information.
+
+### Java Collections Framework
+
+> A Collection represents a group of objects known as its elements. A Java collection is very similar as a C++ container.
+
+&nbsp;&nbsp;&nbsp;&nbsp;As shown in [this tutorial](https://www.javatpoint.com/collections-in-java), the design of Java collection framework is **a bunch of classes**. Different Java collections are related (extends) togather and inheritate methods & variable from basic classes as iterator or collection interface. Such design makes all the collections share similar interface.
+
+&nbsp;&nbsp;&nbsp;&nbsp;From the design of Java collection framework, I should also learn about how to design Java projects ---- **interfeaces are created hierarchically by class extends / implements** just as the image shown below.
+
+![Java Collections Framework Hierarchy](img/in-post/java-collection-hierarchy.png)
+
+
