--- a/_posts/2019-05-22-java-ds.md
+++ b/_posts/2019-05-22-java-ds.md
@@ -46,6 +46,6 @@ arr = new int[10];
 
 &nbsp;&nbsp;&nbsp;&nbsp;From the design of Java collection framework, I should also learn about how to design Java projects ---- **interfeaces are created hierarchically by class extends / implements** just as the image shown below.
 
-![Java Collections Framework Hierarchy](\img/in-post/java-collection-hierarchy.png)
+![Java Collections Framework Hierarchy](/img/in-post/java-collection-hierarchy.png)
 
 
