--- a/_posts/2019-05-22-java-ds.md
+++ b/_posts/2019-05-22-java-ds.md
@@ -12,6 +12,8 @@ tags:
     - Data Structure
 ---
 
+> [This great tutorial](https://www.javatpoint.com/java-tutorial) showed a lot about Java designing principle as well as the interface for Java data structures.
+
 ### String
 
 > `"abc"` is a Java `String` object, or we can also call the string type constructor by `String()` etc. to initialize a string object.
