--- a/_posts/2019-05-17-java-fund.md
+++ b/_posts/2019-05-17-java-fund.md
@@ -13,6 +13,8 @@ tags:
 
 > This post is highly relied on [this great tutorial](https://www.javatpoint.com/java-tutorial).
 
+> And [this tutorial](http://tutorials.jenkov.com/java/abstract-classes.html) is great for fundamental concepts such as class and packages in Java.
+
 > Java is a language high based on the OOP principles, you can't learn Java without learn OOP.
 
 
@@ -53,11 +55,59 @@ Finally the lowest level as the Machine Language.
 
 ### Java Class
 
+> [This tutorial](http://tutorials.jenkov.com/java/abstract-classes.html) is great for fundamental concepts such as class and packages in Java.
+
 > A class should define what is **known** (attributes) and what the class **can do** (methods). This should also been followed by Java's naming convintion which always give methods a verb.
 
 - The constructor **has no return type!** even `void`.
 
-#### Static Key Word
+#### Abstract Class
+
+> [This tutorial](http://tutorials.jenkov.com/java/abstract-classes.html) introdueced the Java abstract class clearly.
+
+&nbsp;&nbsp;&nbsp;&nbsp;A Java abstract class is a class which **cannot be instantiated**, meaning you cannot create new instances of an abstract class. The purpose of an abstract class is to **function as a base** for subclasses. (For an example of such design, check *Java Collections Framework*.)
+
+&nbsp;&nbsp;&nbsp;&nbsp;If a class has an abstract method, the whole class must be declared abstract. **Not all methods in an abstract class have to be abstract methods.** An abstract class can have a mixture of abstract and non-abstract methods. An abstract method has no implementation. It just has a method signature. Just like methods in a Java interface.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Subclasses of an abstract class **must implement (override) all abstract methods of its abstract superclass**. The non-abstract methods of the superclass are just inherited as they are. They can also be overridden, if needed.
+
+- `public abstract class MyClass{}` to declear an abstract class.
+- `public abstract void abstractMethod();` to declear an abstract method (remember there should be no implementation `{}` here).
+
+#### `this` and `super` Keyword
+
+##### `this` in Java Class
+
+> In java, this is a **reference variable** that refers to the current **object**.
+
+- `this` can be used to refer current class instance variable. (By using `this.varName = varName`, we can distinguish between the instance variable and function input.)
+- `this.method()` can be used to invoke current class method (implicitly)
+- `this()` can be used to invoke current class constructor. (The real usage of this case is to **reuse constructor in another constructor**.)
+- `method(this)` can be passed as an argument in the method call.
+- `AnotherClass(this)` can be passed as argument in the constructor call.
+- `return this` can be used to return the current class instance from the method.
+
+##### `super` in Java Class
+
+> Whenever you create the instance of subclass, an instance of parent class is created implicitly which is referred by `super` **reference variable**.
+
+&nbsp;&nbsp;&nbsp;&nbsp;The use of `super` is very similar with `this`.
+
+- `super.var` can be used to refer immediate parent class instance variable.
+- `super.method()` can be used to invoke immediate parent class method.
+- `super()` can be used to invoke immediate parent class constructor.
+
+&nbsp;&nbsp;&nbsp;&nbsp;One most important usage of `super` keyword is to **reuse** the parent's constructor. Check [here](https://www.javatpoint.com/super-keyword) for an example. It seems like the inheritance in Java is letting the subclass object **share** the variables and methods with the implicitly created superclass object.
+
+### Java Interface
+
+> [This tutorial](http://tutorials.jenkov.com/java/interfaces.html) is great for Java interface. Java interface has been widely used in Java program designing such as *Java Collections Framework*.
+
+&nbsp;&nbsp;&nbsp;&nbsp;
+
+### Make Java More Efficient
+
+#### `static` Key Word
 
 > Take care, `static` doesn't equal to `const`. `static` means this variable / method belongs to the class instead of an object.
 
@@ -88,32 +138,9 @@ Finally the lowest level as the Machine Language.
 - If you make any method as final, you cannot override it.
 - If you make any class as final, you cannot extend it.
 
-#### `this` and `super` Keyword
+### OOP In Java
 
-##### `this` in Java Class
-
-> In java, this is a **reference variable** that refers to the current **object**.
-
-- `this` can be used to refer current class instance variable. (By using `this.varName = varName`, we can distinguish between the instance variable and function input.)
-- `this.method()` can be used to invoke current class method (implicitly)
-- `this()` can be used to invoke current class constructor. (The real usage of this case is to **reuse constructor in another constructor**.)
-- `method(this)` can be passed as an argument in the method call.
-- `AnotherClass(this)` can be passed as argument in the constructor call.
-- `return this` can be used to return the current class instance from the method.
-
-##### `super` in Java Class
-
-> Whenever you create the instance of subclass, an instance of parent class is created implicitly which is referred by `super` **reference variable**.
-
-&nbsp;&nbsp;&nbsp;&nbsp;The use of `super` is very similar with `this`.
-
-- `super.var` can be used to refer immediate parent class instance variable.
-- `super.method()` can be used to invoke immediate parent class method.
-- `super()` can be used to invoke immediate parent class constructor.
-
-&nbsp;&nbsp;&nbsp;&nbsp;One most important usage of `super` keyword is to **reuse** the parent's constructor. Check [here](https://www.javatpoint.com/super-keyword) for an example. It seems like the inheritance in Java is letting the subclass object **share** the variables and methods with the implicitly created superclass object.
-
-#### Class Inheritance
+#### Inheritance
 
 > Inheritance represent a **IS A** relationship. It means the subclass **is a** superclass.
 
@@ -121,7 +148,7 @@ Finally the lowest level as the Machine Language.
 
 &nbsp;&nbsp;&nbsp;&nbsp;Multiple inheritance (one subclass inheritate from multiple superclass) is not supported in Java.
 
-#### Class Aggregation
+#### Aggregation
 
 > Aggregation represent a **HAS A** relationship. Such as the company class **has a** boss class.
 
