--- a/_posts/2019-05-17-java-fund.md
+++ b/_posts/2019-05-17-java-fund.md
@@ -65,6 +65,8 @@ Finally the lowest level as the Machine Language.
 
 > [This tutorial](http://tutorials.jenkov.com/java/abstract-classes.html) introdueced the Java abstract class clearly.
 
+> The purpose of abstract class is just to make the programming / designing process more clear.
+
 &nbsp;&nbsp;&nbsp;&nbsp;A Java abstract class is a class which **cannot be instantiated**, meaning you cannot create new instances of an abstract class. The purpose of an abstract class is to **function as a base** for subclasses. (For an example of such design, check *Java Collections Framework*.)
 
 &nbsp;&nbsp;&nbsp;&nbsp;If a class has an abstract method, the whole class must be declared abstract. **Not all methods in an abstract class have to be abstract methods.** An abstract class can have a mixture of abstract and non-abstract methods. An abstract method has no implementation. It just has a method signature. Just like methods in a Java interface.
@@ -103,7 +105,40 @@ Finally the lowest level as the Machine Language.
 
 > [This tutorial](http://tutorials.jenkov.com/java/interfaces.html) is great for Java interface. Java interface has been widely used in Java program designing such as *Java Collections Framework*.
 
-&nbsp;&nbsp;&nbsp;&nbsp;
+> The greatest usage of interface is once a Java class implements an Java interface you can **use an instance of that class as an instance of that interface**.
+
+#### Basic Introduction
+
+&nbsp;&nbsp;&nbsp;&nbsp;A Java interface is a bit like a class, except a Java interface **can only contain method signatures and fields**. An Java interface cannot contain an implementation of the methods, only the signature (name, parameters and exceptions) of the method.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Variables defined in Java interface can be accessed directly from the interface, which is very similar s a static variable in Java class.
+
+- `public interface MyInterface{}` to declear an interface.
+- `public class MyClass implements MyInterface{}` to **implement** an interface.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Once a Java class implements an Java interface you can **use an instance of that class as an instance of that interface** as shown below. Notice how the variable is declared to be of the interface type `MyInterface` while the object created is of type `MyInterfaceImpClass`.
+
+~~~
+MyInterface myInterface = new MyInterfaceImpClass();
+
+myInterface.sayHello();
+~~~
+
+#### Default Methods in Java Interface
+
+&nbsp;&nbsp;&nbsp;&nbsp;Since, Java 8, engineers has added the concept of **interface default methods** to Java interfaces. An interface default method can contain a default implementation of that method. Classes that implement the interface but which contain no implementation for the default interface will then automatically **inheritate** the default method implementation. This is to address the problem of *update Java interface*, for more details, check [this tutorial](http://tutorials.jenkov.com/java/interfaces.html).
+
+- `default void defaultMethod(){}` to define a default interface method.
+
+#### Static Method in Java Interface
+
+&nbsp;&nbsp;&nbsp;&nbsp;Except for default method, we can also **implement static method in interface**. A good example would be a Vehicle interface could have a `printVehicle(Vehicle v)` static method.
+
+#### Interface Inheritance
+
+&nbsp;&nbsp;&nbsp;&nbsp;An interface can inheritate from another interface with `extends` keyword just like class inheritance. The new interface then get all the methods signature decleared in its super interface. Override is also allowed in interface inheritance.
+
+
 
 ### Make Java More Efficient
 
