--- a/_posts/2019-05-17-java-fund.md
+++ b/_posts/2019-05-17-java-fund.md
@@ -138,7 +138,33 @@ myInterface.sayHello();
 
 &nbsp;&nbsp;&nbsp;&nbsp;An interface can inheritate from another interface with `extends` keyword just like class inheritance. The new interface then get all the methods signature decleared in its super interface. Override is also allowed in interface inheritance.
 
+#### Generic Interface
 
+> How **type casting** works in Java can be found in [this tutorial](https://www.baeldung.com/java-type-casting). Remember to check object tyep with `instanceof` while downcasting objects.
+
+&nbsp;&nbsp;&nbsp;&nbsp;A generic Java interface is an interface which **can be typed** - meaning it can be specialized to work with a specific type (e.g. interface or class) when used.
+
+&nbsp;&nbsp;&nbsp;&nbsp;To gain **more flexibility**, generic interface can be decleared with :
+
+~~~
+public interface MyProducer <T>{
+    
+    public T produce();
+    
+}
+~~~
+
+&nbsp;&nbsp;&nbsp;&nbsp;And it can be implemented with :
+
+~~~
+public class CarProducer<T> implements MyProducer<T>{
+
+    @Override
+    public T produce() {
+        return (T) new Car();
+    }
+}
+~~~
 
 ### Make Java More Efficient
 
