--- a/_posts/2019-05-17-java-fund.md
+++ b/_posts/2019-05-17-java-fund.md
@@ -166,6 +166,17 @@ public class CarProducer<T> implements MyProducer<T>{
 }
 ~~~
 
+### Interface VS. Abstract Class
+
+> A great tutorial for the difference between Java interface and abstract class can be found in [this page](http://tutorials.jenkov.com/java/interfaces-vs-abstract-classes.html).
+
+- **Interface**: to make the classes **using** the interface **independent** of the classes **implementing** the interface. 
+- **Abstract class**: typically used as **base classes for extension** by subclasses. 
+
+&nbsp;&nbsp;&nbsp;&nbsp;The technical difference is that we can use `myInterface.hello()` to directly **access object from interface reference** once it is decleared to be an object for a class that implimented this interface.
+
+&nbsp;&nbsp;&nbsp;&nbsp;If you need to separate an interface from its implementation, use an interface. If you also need to provide a base class or default implementation of the interface, **add an abstract class** (or normal class) that implements the interface! Check the tutorial mentioned in the beginning of this section for an **example** for using interface, abstract class and normal class togather.
+
 ### Make Java More Efficient
 
 #### `static` Key Word
