--- a/_posts/2019-05-17-java-fund.md
+++ b/_posts/2019-05-17-java-fund.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "Java JVM & OOP"
+title:      "Java Basics"
 subtitle:   ""
 date:       2019-05-17
 author:     "Jiayi.Liu"
@@ -60,6 +60,19 @@ Finally the lowest level as the Machine Language.
 > A class should define what is **known** (attributes) and what the class **can do** (methods). This should also been followed by Java's naming convintion which always give methods a verb.
 
 - The constructor **has no return type!** even `void`.
+
+#### Nested Class
+
+> In Java nested classes are classes that are **defined inside** another class. In Java nested classes are considered **members** of their enclosing class.
+
+&nbsp;&nbsp;&nbsp;&nbsp;As shown in [this tutorial](http://tutorials.jenkov.com/java/nested-classes.html), the nested class in Java can be used as:
+
+1. Static Nested Classes
+2. Non-static Nested Classes (Inner Class)
+3. Local Classes
+4. Anonymous Classes
+
+&nbsp;&nbsp;&nbsp;&nbsp;More details can be find in the tutorial itself. The reason to use nested class is just to clearly **group** the nested class with its surrounding class, signaling that these two classes are to be used together. It can also be done with Java packages, but nested class is a stronger group and saying, in most of the case, **a nested class is typically only used by or with its enclosing class**. Take a look at [this example](http://tutorials.jenkov.com/java/nested-classes.html#nested-classes-benefits) for the usage of nested classes.
 
 #### Abstract Class
 
@@ -210,6 +223,23 @@ public class CarProducer<T> implements MyProducer<T>{
 - If you make any method as final, you cannot override it.
 - If you make any class as final, you cannot extend it.
 
+### Java	 Access Modifier
+
+&nbsp;&nbsp;&nbsp;&nbsp;The java access modifier can be applied to **class, constructor, method, filed, nested class**. Except for `private class` and `protected class`, which don't exist.
+
+- `private` : A private field / variable or method can only be accessed **within the same class**. A private constructur can only be used inside the class.
+- `default` (package) : A default / package field and method can be accessed by classes within the same package.
+- `protected` : The protected access modifier provides the same access as the default access modifier, with the addition that **subclasses can access protected methods and member variables (fields) of the superclass**. This is true even if the subclass is not located in the same package as the superclass.
+- `public` : The Java access modifier public means that all code can access the class, field, constructor or method, regardless of where the accessing code is located.
+
+### Exception Handling
+
+- Checked Exception : checked at **compile-time**.
+- Unchecked Exception : not checked at compile-time, but they are checked at **runtime**.
+- Error : Error is irrecoverable e.g. OutOfMemoryError, VirtualMachineError, AssertionError etc.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Check [this tutorial](https://www.javatpoint.com/exception-handling-in-java) for some instructions and examples for handling exceptions in Java style.
+
 ### OOP In Java
 
 #### Inheritance
@@ -249,7 +279,6 @@ public class CarProducer<T> implements MyProducer<T>{
 
 // To Continue: last time stop at [here](https://www.javatpoint.com/runtime-polymorphism-in-java)
 
-#####
 
 
 
