--- a/_posts/2019-05-17-java-fund.md
+++ b/_posts/2019-05-17-java-fund.md
@@ -11,7 +11,7 @@ tags:
     - Programming
 ---
 
-> This post is highly relied on [this great tutorial](https://www.javatpoint.com/java-tutorial).
+> The OOP part in this post is highly relied on [this great tutorial](https://www.javatpoint.com/java-tutorial).
 
 > And [this tutorial](http://tutorials.jenkov.com/java/abstract-classes.html) is great for fundamental concepts such as class and packages in Java.
 
