--- a/_posts/2019-05-22-java-ds.md
+++ b/_posts/2019-05-22-java-ds.md
@@ -14,6 +14,30 @@ tags:
 
 > [This great tutorial](https://www.javatpoint.com/java-tutorial) showed a lot about Java designing principle as well as the interface for Java data structures.
 
+> [This tutorial](http://tutorials.jenkov.com/java) is wonderful for basic Java data structure and syntax.
+
+### Difference Between Type & Class
+
+&nbsp;&nbsp;&nbsp;&nbsp;In Java, there are identifiers for **primitive types** such as `int` and `char`. But as shown in [this answer](https://www.quora.com/What-is-the-difference-between-an-integer-and-int-in-Java), `int` and `char` **variable** **isn't a object**! They are unmutable and have no methods and fields. Also, primitive typed variables are offten stored in **stack** which makes it hard to manage in Java collections.
+
+&nbsp;&nbsp;&nbsp;&nbsp;As a result, we can't use `int` and `char` to instanciate a generic typed class. Instead, we need to use a **real class**, which is `Interger` and `Character`.
+
+### Java Array
+
+> Check [this tutorial](http://tutorials.jenkov.com/java/arrays.html) for more details about Java arrays.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Java array itself though **is an object** which stores in **heap**. To instantiate a Java array, the most complete way should be:
+
+~~~
+int[] intArray, intArray2;
+
+intArray = new int[10];
+
+intArray2 = new int[]{1,2,3,4,5};
+~~~
+
+&nbsp;&nbsp;&nbsp;&nbsp;For Java array class, the only thing we need to use is `arr.length` and `arr[i]`.
+
 ### String
 
 > `"abc"` is a Java `String` object, or we can also call the string type constructor by `String()` etc. to initialize a string object.
