--- a/_posts/2019-05-22-java-ds.md
+++ b/_posts/2019-05-22-java-ds.md
@@ -16,6 +16,8 @@ tags:
 
 > [This tutorial](http://tutorials.jenkov.com/java) is wonderful for basic Java data structure and syntax.
 
+> [Geek for Geek](https://www.geeksforgeeks.org/java/) has great explaination for low level Java package implementation such as the Java collections framework. It shows show Java collectors are defined and implimented.
+
 ### Difference Between Type & Class
 
 &nbsp;&nbsp;&nbsp;&nbsp;In Java, there are identifiers for **primitive types** such as `int` and `char`. But as shown in [this answer](https://www.quora.com/What-is-the-difference-between-an-integer-and-int-in-Java), `int` and `char` **variable** **isn't a object**! They are unmutable and have no methods and fields. Also, primitive typed variables are offten stored in **stack** which makes it hard to manage in Java collections.
@@ -36,11 +38,15 @@ intArray = new int[10];
 intArray2 = new int[]{1,2,3,4,5};
 ~~~
 
-&nbsp;&nbsp;&nbsp;&nbsp;For Java array class, the only thing we need to use is `arr.length` and `arr[i]`.
+&nbsp;&nbsp;&nbsp;&nbsp;For Java array class, the only thing we need to use is `arr.length` and `arr[i]`. Put special attention that `.length()` is a method in most all other data structures but it's a field in Java array.
 
 ### String
 
+> String represents **fixed-length, immutable** character sequences 
+
 > `"abc"` is a Java `String` object, or we can also call the string type constructor by `String()` etc. to initialize a string object.
+
+> In Java, the **single quotes** for `char`, and **double quotes** for `String`.
 
 - `str0 + str1` is equal to `str0.concat(str1)` which will return the concatenation of two string.
 - `str.length()` for length of the string.
@@ -50,6 +56,12 @@ intArray2 = new int[]{1,2,3,4,5};
 - `str0.compareTo(str1)` to calculate the `<=>` between strings.
 - `str.toLowerCase()` & `str.toUpperCase()`.
 - `str.split(Char)` to split by char.
+
+#### Iterate a Java String
+
+> Note that `String` itself **isn't iterable**, it's not a subclass of the class iterator, which is in the top of Java collection framework.
+
+&nbsp;&nbsp;&nbsp;&nbsp;[This post](https://www.techiedelight.com/iterate-over-characters-string-java/) gives great methods for iterate with a String. The most important is using `String.charAt(i)`, `String.toCharArray()`, `String.split("")` and using `CharacterIterator`.
 
 ### Array
 
@@ -73,5 +85,10 @@ arr = new int[10];
 &nbsp;&nbsp;&nbsp;&nbsp;From the design of Java collection framework, I should also learn about how to design Java projects ---- **interfeaces are created hierarchically by class extends / implements** just as the image shown below.
 
 ![Java Collections Framework Hierarchy](/img/in-post/java-collection-hierarchy.png)
+
+### Set
+
+#### Initializing a HashSet
+
 
 
