--- a/_posts/2019-07-16-14ways.md
+++ b/_posts/2019-07-16-14ways.md
@@ -1,3 +1,4 @@
+---
 layout:     post
 title:      "14 Patterns to Ace Any Coding Interview Question"
 subtitle:   ""
@@ -17,6 +18,8 @@ tags:
 
 ### Sliding Window - Reuse Previous Information
 
+> 注意先分析这个题目**必然需要的资源是什么**，比如“必然要遍历所有subarrays”，这种情况就比较适合用sliding window。
+
 &nbsp;&nbsp;&nbsp;&nbsp;As shown in [this problem](https://www.geeksforgeeks.org/sliding-window-maximum-maximum-of-all-subarrays-of-size-k/), the key for sliding window (or even any programming problem is to **reuse the previous information / reduce redundancy**). To successfully reuse information, we need to firstly **find good series**, then make the **useful element / information** clear, and finally build the program.
 
 #### Find a Series
@@ -33,4 +36,8 @@ tags:
 
 ### Two Pointer
 
+&nbsp;&nbsp;&nbsp;&nbsp;Two pointer is normally very useful when **the state can give information about what direction to move**, such as in two sum problem. Also, not as sliding window which is more useful for loop over all elements, two pointer is more useful while searching for a state.
 
+### Fast & Slow Pointer
+
+&nbsp;&nbsp;&nbsp;&nbsp;
