--- a/_posts/2019-07-16-14ways.md
+++ b/_posts/2019-07-16-14ways.md
@@ -30,6 +30,8 @@ tags:
 
 #### Define Useful Elements
 
+> Notice that the *previous information* we said **hasn't need to be information from the last state!**
+
 &nbsp;&nbsp;&nbsp;&nbsp;As shown in both problems above, we need to define the **useful range** for us to reuse / store the previous information. Notice that defining the useful range is basically equal to defining the waste / processed range.
 
 &nbsp;&nbsp;&nbsp;&nbsp;The key for finding useful range is to **consider a normal state**. For example, consider just a random (or the first) element in the loop and find out what is the minimum information it needs.
@@ -40,4 +42,20 @@ tags:
 
 ### Fast & Slow Pointer
 
-&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;The idea behind fast & slow pointer algorithm is to make the fast pointer go 2 steps at a time. The stop situation should be either the *fast* pointer get the end or the fast and slow pointer **meet**.
+
+&nbsp;&nbsp;&nbsp;&nbsp;One thing to notice is that in this algorithm, we only need to check the *fast pointer*. Every step the slow pointer goes, the fast pointer already went and must be valid.
+
+### Merge Intervals
+
+&nbsp;&nbsp;&nbsp;&nbsp;Merge intervals is more likely a senario than an algorithm. **Sorting** is a method likely to be used in this kind of problems because *it's hard to have a quick search for interval class*.
+
+&nbsp;&nbsp;&nbsp;&nbsp;Heap can be a very useful data structure in this kind of problems. Just like mentioned above, using heap is considered a more efficient way of sorting.
+
+### Use Index as Information
+
+&nbsp;&nbsp;&nbsp;&nbsp;Sometimes, index in array can be used as powerful information, such as to finding the missing / redundent number in an array. The key point for this algorithm is to **switch** each number to the corresponding index.
+
+### Conclusion
+
+&nbsp;&nbsp;&nbsp;&nbsp;No matter what pattern, computer program is just a series of actions. So, **defining the states**, consider **what information is needed in each state** (kinda make a sub-problem) will always lead to the solution.
